# state-capacity-tinyrnn

./: .gitignore  .zenodo.json  CITATION.cff  DATA_AVAILABILITY.md  LICENSE  MANIFEST_SHA256.csv  Makefile  OPEN_SCIENCE_RELEASE_CHECKLIST.md  README.md  README_GITHUB_UPLOAD.md  RELEASE_CHECKLIST.md  environment.yml  pyproject.toml
.github/workflows/: extract-package.yml
config/: nhb_feature_taxonomy.yaml
configs/: datasets.yaml  figures.yaml  model.yaml  neurophysiology.yaml  perturbations.yaml  preprocessing.yaml  run_mode.yaml  statistics.yaml
docs/: codex_full_research_manual_state_capacity.docx  codex_full_research_manual_state_capacity.md  state_capacity_revised_intro_methods_NHB.docx  step_pack.md
scripts/: _not_yet_implemented_template.py  build_nature_style_word_manuscript.py
scripts/00_audit_existing/: audit_existing.py
scripts/01_download/: download_all.py  download_tu_berlin_eeg_nirs.py  download_zenodo_record.py
scripts/02_inventory/: raw_inventory.py
scripts/03_preprocess_behavior/: preprocess_all.py
scripts/04_theory_crosswalk/: build_crosswalk.py
scripts/05_artificial_agents/: build_artificial_agents.py
scripts/06_ann_intervention_gate/: run_ann_gate.py
scripts/06_performance_matching/: run_performance_matching.py
scripts/07_train_tinyrnn/: train_all.py
scripts/08_estimate_coordinates/: estimate_coordinates.py
scripts/09_dynamics/: run_dynamics.py
scripts/09_human_projection/: run_human_projection.py
scripts/10_ds007554_discovery/: run_discovery.py
scripts/nhb_revision/: nhb_utils.py  (+30 more)
tests/: test_full_run_guard.py
(+19 files in other folders)
