[project]
name = "state-capacity-tinyrnn"
version = "1.0.0"
description = "Reproducible TinyRNN pipeline for machine-defined state and capacity profiles in human cognition."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "statsmodels",
  "matplotlib",
  "seaborn",
  "pyarrow",
  "torch",
  "mne",
  "mne-nirs",
  "pyedflib",
  "neurokit2",
  "openpyxl",
  "python-docx",
  "xlsxwriter",
  "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
